--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -351,7 +351,7 @@
     "newlist": {
         "exportYamlTip": "PreCI 是蓝盾 DevOps 为开发者在 CI 之前的研发活动所提供的一套解决方案，能在提交代码之前尽早发现问题，提升代码质量。包括 IDE 插件和命令行工具。",
         "exportJsonTip": "通过导入功能，可以快速创建流水线，也可以实现跨项目、跨蓝盾平台的流水线导入。",
-        "exportGitciTip": "工蜂CI是蓝盾与工蜂合作，引入 Pipeline as Code 的理念，支持通过编码定义流水线的一套解决方案；方便协作和版本控制，更契合开发的习惯。",
+        "exportGitciTip": "Stream 是蓝盾与工蜂团队联合开发，以 Pipeline as Code 为理念设计的一套 CI 服务。",
         "chooseExport": "选择导出的文件格式",
         "defaultViews": "我的常用视图",
         "copyPipeline": "复制流水线",
