--- a/src/frontend/locale/environment/zh-CN.json
+++ b/src/frontend/locale/environment/zh-CN.json
@@ -205,6 +205,7 @@
         "executeCommandPrompt": "请在合适的位置为Agent创建工作目录，并在该目录下执行安装命令",
         "installBuildMachineTips": "如何在Windows上安装Agent",
         "connectedNodes": "已连接的节点",
+        "unableToSpawnNodes": "无法刷出节点?",
         "noConnectedNodes": "暂无连接任何连接节点",
         "loginMethod": "目标机登录方式",
         "checkMails": "密码请查收邮件",
