--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -732,10 +732,9 @@
     "搜索": "搜索",
     "质量红线指标": "质量红线指标",
     "配置片段：": "配置片段：",
-    "输出参数：": "输出参数：",
+    "输出参数": "输出参数",
     "参数名": "参数名",
     "参数说明": "参数说明",
-    "质量红线指标：": "质量红线指标：",
     "指标名": "指标名",
     "值类型": "值类型",
     "支持的操作": "支持的操作"
