--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -737,5 +737,7 @@
     "参数说明": "参数说明",
     "指标名": "指标名",
     "值类型": "值类型",
-    "支持的操作": "支持的操作"
+    "支持的操作": "支持的操作",
+    "说明：": "说明：",
+    "说明文案": "支持在 stream 中，通过表达式${{ steps.<step-id>.outputs.<output-var-name> }} 访问; 在UI编排流水线中，通过表达式${{ <namespace>_<output-var-name> }} 访问的操作"
 }
