--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -739,5 +739,5 @@
     "值类型": "值类型",
     "支持的操作": "支持的操作",
     "说明：": "说明：",
-    "说明文案": "支持在 stream 中，通过表达式${{ steps.<step-id>.outputs.<output-var-name> }} 访问; 在UI编排流水线中，通过表达式${{ <namespace>_<output-var-name> }} 访问。"
+    "说明文案": "在 stream 中，通过表达式${{ steps.<step-id>.outputs.<output-var-name> }} 访问; 在UI编排流水线中，通过表达式${{ <namespace>_<output-var-name> }} 访问。"
 }
