--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -197,7 +197,7 @@
     "该镜像不推荐使用": "该镜像已不推荐使用",
     "yaml": "YAML 片段",
     "YAMLV1": "YAML V1 片段",
-    "YAMLV2": "YAML V2 片段",
+    "YAMLV2": "YAML 片段",
     "成员名称": "成员名称",
     "该分类下暂无容器镜像": "该分类下暂无容器镜像",
     "发布容器镜像": "发布容器镜像",
