--- a/src/frontend/locale/store/en-US.json
+++ b/src/frontend/locale/store/en-US.json
@@ -734,8 +734,9 @@
     "配置片段：": "Configuration Snippet:",
     "输出参数": "Output Parameters",
     "参数名": "Parameter Name",
-    "参数说明": "Parameter Description",
+    "指标说明": "Indicators Description",
     "指标名": "Quota Name",
+    "指标中文名": "Indicators Chinese name",
     "值类型": "Value Type",
     "支持的操作": "Supported Operations",
     "说明：": "Usage: ",
