--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -735,8 +735,9 @@
     "配置片段：": "配置片段：",
     "输出参数": "输出参数",
     "参数名": "参数名",
-    "参数说明": "参数说明",
+    "指标说明": "指标说明",
     "指标名": "指标名",
+    "指标中文名": "指标中文名",
     "值类型": "值类型",
     "支持的操作": "支持的操作",
     "说明：": "说明：",
