feat: 关联gitlab代码库需支持选择使用http或ssh方式鉴权 issue #5315

--- a/src/frontend/locale/codelib/en-US.json
+++ b/src/frontend/locale/codelib/en-US.json
@@ -44,8 +44,10 @@
     "successfullyAdded": "successfully added",
     "githubRule": "start by https://github.com/",
     "svnSshRule": "start by svn+ssh:// and the correct one",
+    "gitlabSshRule": "start by git@ and end with .git",
     "httpRule": "start by http:// and the correct one",
     "httpsRule": "start by https:// and end with .git ",
+    "httpOrHttpsRule": "start by http:// or https:// and end with .git",
     "paramBeString": "parameter must be string",
     "gitCodeRule": "start by http://git.code.oa.com and end with .git ",
     "gitlabRule": "start by http://gitlab-paas.open.oa.com and end with .git ",
