feat: 流水线新增构建矩阵 issue #4518

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -730,6 +730,7 @@
         "inputEnv": "Input pools alias",
         "mutexGroup": "Mutex group",
         "enableMatrix": "Enable matrix job",
+        "linkDesc": "Introduction and demos",
         "jobMatrix": "Matrix Job",
         "jobOption": " Control option",
         "atomOption": "Control option",
